{
    "name": "TouchControl",
    "maps": [
        {
            "name": "Touch",
            "id": "7f79a5b4-1b1d-4ffd-b78f-97eaae0e6e63",
            "actions": [
                {
                    "name": "TouchInput",
                    "type": "PassThrough",
                    "id": "fcd46a89-5e50-435d-9270-1b03b1732a47",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "TouchPress",
                    "type": "Button",
                    "id": "2158e8db-8bcf-43c9-8348-d367afd7a92e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "TouchPosition",
                    "type": "PassThrough",
                    "id": "288b595e-94a4-4320-9624-ee76b04a4955",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "76ba6ffe-1166-4748-8d86-b59bcc21fe5f",
                    "path": "<Touchscreen>/primaryTouch",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchInput",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a4886c26-0d0b-4709-b84a-e371bc36ebc7",
                    "path": "<Touchscreen>/primaryTouch/press",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPress",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "026bcab4-9107-4fb4-a6a1-3abb7cd4afe2",
                    "path": "<Touchscreen>/primaryTouch/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}